--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@portabletext/react": "^3.2.1",
+    "@sanity/client": "^7.8.1",
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
