--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@gsap/react": "^2.1.2",
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.8.1",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
