--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
