--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.8.1",
+    "@sanity/image-url": "^1.2.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
