--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.8.1",
     "@sanity/image-url": "^1.2.0",
+    "@types/nodemailer": "^7.0.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
     "next": "15.3.4",
     "next-view-transitions": "^0.3.4",
+    "nodemailer": "^7.0.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
