--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^7.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "vanilla-cookieconsent": "^3.1.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
