--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@portabletext/react": "^3.2.1",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@sanity/client": "^7.8.1",
     "@sanity/image-url": "^1.2.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/three": "^0.180.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.4",
+    "leva": "^0.10.0",
     "lucide-react": "^0.525.0",
+    "maath": "^0.10.8",
     "motion": "^12.23.12",
     "next": "15.3.4",
     "next-view-transitions": "^0.3.4",
     "nodemailer": "^7.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "three": "^0.180.0",
     "vanilla-cookieconsent": "^3.1.0",
     "zod": "^4.1.5"
   },
